<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_detectTextId"
        android:name="com.example.learn_english.ui.DetectText.DetectTextView"
        android:label="@string/menu_detectText"
        tools:layout="@layout/fragment_detect_text" />

    <fragment
        android:id="@+id/nav_find"
        android:name="com.example.learn_english.ui.Find.FindModel"
        android:label="@string/menu_findObject"
        tools:layout="@layout/fragment_find_object" >
    </fragment>
    <fragment
        android:id="@+id/nav_translatorId"
        android:name="com.example.learn_english.ui.translator.TranslatorView"
        android:label="@string/menu_translate"
        tools:layout="@layout/fragment_translator" >
    </fragment>
    <fragment
        android:id="@+id/nav_flashcard"
        android:name="com.example.learn_english.ui.FlashCard.FlashCardView"
        android:label="@string/menu_flaszCard"
        tools:layout="@layout/fragment_flashcard" >
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.learn_english.ui.home.ProfileView"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>